--- a/flutter_application_2/pubspec.yaml
+++ b/flutter_application_2/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.3.0
+  shared_preferences: ^2.5.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
